# kimera_tests

./: CMakeLists.txt  meson.build  oakd_kimera.bash  realsense_intrinsics_test.py
builddir/meson-logs/: meson-log.txt
params/OAK-D/: calc_params.yaml
params/t26x/: FrontendParams.yaml  LcdParams.yaml  LeftCameraParams.yaml  RightCameraParams.yaml
src/: main.cpp
